--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,9 @@
 #server.port=5050
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5433/school_db
+spring.datasource.url=jdbc:postgresql://containers-us-west-186.railway.app:5822/railway
 spring.datasource.username=postgres
-spring.datasource.password=postgres
+spring.datasource.password=f2K0EEMj3R46N4QRWbqU
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.properties.hibernate.show_sql=true
