--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 #server.port=5050
 
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://containers-us-west-186.railway.app:5822/railway
+spring.datasource.url=jdbc:postgresql://postgres:f2K0EEMj3R46N4QRWbqU@containers-us-west-186.railway.app:5822/railway
 spring.datasource.username=postgres
 spring.datasource.password=f2K0EEMj3R46N4QRWbqU
 
